# moonandsun

./: .gitignore  Makefile  README.md  pyproject.toml
src/: get_credentials.py
src/phases/: create_event.py  get_moon_phases.py  main.py
src/riseandset/: create_event.py  get_sunrise_and_sunset.py  main.py
